nohup.out
Watching for file changes with StatReloader
/home/rohn/GitHub/carhouse/carhouse/settings.py changed, reloading.
Performing system checks...

System check identified no issues (0 silenced).
August 03, 2025 - 22:55:00
Django version 5.2.1, using settings 'carhouse.settings'
Starting ASGI/Daphne version 4.1.2 development server at http://0.0.0.0:8000/
Quit the server with CONTROL-C.
Watching for file changes with StatReloader
/home/rohn/GitHub/carhouse/app/urls.py changed, reloading.
Performing system checks...

System check identified no issues (0 silenced).
August 03, 2025 - 22:58:19
Django version 5.2.1, using settings 'carhouse.settings'
Starting ASGI/Daphne version 4.1.2 development server at http://0.0.0.0:8000/
Quit the server with CONTROL-C.
Watching for file changes with StatReloader
/home/rohn/GitHub/carhouse/carhouse/settings.py changed, reloading.
Performing system checks...

System check identified no issues (0 silenced).
August 03, 2025 - 22:58:31
Django version 5.2.1, using settings 'carhouse.settings'
Starting ASGI/Daphne version 4.1.2 development server at http://0.0.0.0:8000/
Quit the server with CONTROL-C.
Traceback (most recent call last):
  File "/home/rohn/GitHub/carhouse/manage.py", line 22, in <module>
    main()
  File "/home/rohn/GitHub/carhouse/manage.py", line 18, in main
    execute_from_command_line(sys.argv)
  File "/home/rohn/GitHub/carhouse/.env/lib/python3.12/site-packages/django/core/management/__init__.py", line 442, in execute_from_command_line
    utility.execute()
  File "/home/rohn/GitHub/carhouse/.env/lib/python3.12/site-packages/django/core/management/__init__.py", line 382, in execute
    settings.INSTALLED_APPS
  File "/home/rohn/GitHub/carhouse/.env/lib/python3.12/site-packages/django/conf/__init__.py", line 81, in __getattr__
    self._setup(name)
  File "/home/rohn/GitHub/carhouse/.env/lib/python3.12/site-packages/django/conf/__init__.py", line 68, in _setup
    self._wrapped = Settings(settings_module)
                    ^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/rohn/GitHub/carhouse/.env/lib/python3.12/site-packages/django/conf/__init__.py", line 166, in __init__
    mod = importlib.import_module(self.SETTINGS_MODULE)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/lib/python3.12/importlib/__init__.py", line 90, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "<frozen importlib._bootstrap>", line 1387, in _gcd_import
  File "<frozen importlib._bootstrap>", line 1360, in _find_and_load
  File "<frozen importlib._bootstrap>", line 1331, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 935, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 991, in exec_module
  File "<frozen importlib._bootstrap_external>", line 1129, in get_code
  File "<frozen importlib._bootstrap_external>", line 1059, in source_to_code
  File "<frozen importlib._bootstrap>", line 488, in _call_with_frames_removed
  File "/home/rohn/GitHub/carhouse/carhouse/settings.py", line 32
    //DEBUG = os.environ.get('DEBUG', 'True') == 'True'
    ^^
SyntaxError: invalid syntax
Traceback (most recent call last):
  File "/home/rohn/GitHub/carhouse/manage.py", line 22, in <module>
    main()
  File "/home/rohn/GitHub/carhouse/manage.py", line 18, in main
    execute_from_command_line(sys.argv)
  File "/home/rohn/GitHub/carhouse/.env/lib/python3.12/site-packages/django/core/management/__init__.py", line 442, in execute_from_command_line
    utility.execute()
  File "/home/rohn/GitHub/carhouse/.env/lib/python3.12/site-packages/django/core/management/__init__.py", line 394, in execute
    autoreload.check_errors(django.setup)()
  File "/home/rohn/GitHub/carhouse/.env/lib/python3.12/site-packages/django/utils/autoreload.py", line 64, in wrapper
    fn(*args, **kwargs)
  File "/home/rohn/GitHub/carhouse/.env/lib/python3.12/site-packages/django/__init__.py", line 24, in setup
    apps.populate(settings.INSTALLED_APPS)
  File "/home/rohn/GitHub/carhouse/.env/lib/python3.12/site-packages/django/apps/registry.py", line 91, in populate
    app_config = AppConfig.create(entry)
                 ^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/rohn/GitHub/carhouse/.env/lib/python3.12/site-packages/django/apps/config.py", line 123, in create
    mod = import_module(mod_path)
          ^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/lib/python3.12/importlib/__init__.py", line 90, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "<frozen importlib._bootstrap>", line 1387, in _gcd_import
  File "<frozen importlib._bootstrap>", line 1360, in _find_and_load
  File "<frozen importlib._bootstrap>", line 1331, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 935, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 995, in exec_module
  File "<frozen importlib._bootstrap>", line 488, in _call_with_frames_removed
  File "/home/rohn/GitHub/carhouse/.env/lib/python3.12/site-packages/daphne/apps.py", line 6, in <module>
    import daphne.server  # noqa: F401
    ^^^^^^^^^^^^^^^^^^^^
  File "/home/rohn/GitHub/carhouse/.env/lib/python3.12/site-packages/daphne/server.py", line 7, in <module>
    from twisted.internet import asyncioreactor  # isort:skip
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/rohn/GitHub/carhouse/.env/lib/python3.12/site-packages/twisted/internet/asyncioreactor.py", line 19, in <module>
    from twisted.internet.posixbase import (
  File "/home/rohn/GitHub/carhouse/.env/lib/python3.12/site-packages/twisted/internet/posixbase.py", line 17, in <module>
    from twisted.internet import error, tcp, udp
  File "/home/rohn/GitHub/carhouse/.env/lib/python3.12/site-packages/twisted/internet/tcp.py", line 40, in <module>
    from twisted.internet._newtls import (
  File "/home/rohn/GitHub/carhouse/.env/lib/python3.12/site-packages/twisted/internet/_newtls.py", line 18, in <module>
    from twisted.protocols.tls import TLSMemoryBIOFactory
  File "/home/rohn/GitHub/carhouse/.env/lib/python3.12/site-packages/twisted/protocols/tls.py", line 45, in <module>
    from OpenSSL.SSL import Connection, Error, SysCallError, WantReadError, ZeroReturnError
  File "/home/rohn/GitHub/carhouse/.env/lib/python3.12/site-packages/OpenSSL/__init__.py", line 8, in <module>
    from OpenSSL import SSL, crypto
  File "/home/rohn/GitHub/carhouse/.env/lib/python3.12/site-packages/OpenSSL/SSL.py", line 18, in <module>
    from OpenSSL._util import (
  File "/home/rohn/GitHub/carhouse/.env/lib/python3.12/site-packages/OpenSSL/_util.py", line 8, in <module>
    from cryptography.hazmat.bindings.openssl.binding import Binding
  File "<frozen importlib._bootstrap>", line 1360, in _find_and_load
  File "<frozen importlib._bootstrap>", line 1322, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 1262, in _find_spec
  File "<frozen importlib._bootstrap_external>", line 1528, in find_spec
  File "<frozen importlib._bootstrap_external>", line 1502, in _get_spec
  File "<frozen importlib._bootstrap_external>", line 1620, in find_spec
KeyboardInterrupt
